--- a/m1/w1/progettosett1/start/assets/css/stile.css
+++ b/m1/w1/progettosett1/start/assets/css/stile.css
@@ -13,6 +13,15 @@ header {
     
     }
 
+#logo{
+    width: auto;
+    height: auto;
+}
+
+#fototonda{
+    border-radius: 30em;
+}
+
 main section{
 
     background-image: url(../images/banner.jpg);
@@ -29,7 +38,7 @@ main section>p{
     margin-bottom: 3em;
 }
 
-main section>a{
+button{
     background-color: rgb(252, 110, 59) ;
     
     font-family:  'Montserrat', sans-serif;
@@ -39,8 +48,11 @@ main section>a{
     margin-top: 3em;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
-
+    text-decoration: none;
+    border-radius: 0.4em;
 }
+    
+
 
 h1, h3, h2{
     color: #25a2c3;
@@ -66,6 +78,13 @@ p{
     background-color: orangered;
 color: white;
 line-height: 1.65;
+}
+
+
+img{
+   width: 100%;
+   height: 100%;
+   
 }
 
 main div>h2{
@@ -98,6 +117,8 @@ div{
 }
 
 .quadbordati{
+    border: 1px solid black;
+    margin: 20px ;
     
 
 }
