--- a/m2/w1/Memory progetto m2w1/css/style.css
+++ b/m2/w1/Memory progetto m2w1/css/style.css
@@ -2,10 +2,14 @@
     font-family: 'Lexend', sans-serif;
 }
 
+html{
+    height: 100vh;
+}
+
 .container {
     width: 900px;
     margin: auto;
-    background-color: rgba(22, 104, 228, 0.925);
+    background-color: rgba(247, 232, 189, 0.925);
 }
 
 .text-center {
@@ -15,27 +19,23 @@
 .icon-grid {
 /* flex! */
 display: flex;
-align-items: center;
-justify-content: center;
 flex-wrap: wrap;
+justify-content: center;
 }
 
 .show {
 /* visibilità e opacità */
-visibility: visible !important;
-opacity: 100 !important;
-
+    visibility: visible !important; 
+    opacity: 1 !important;
 }
 
 #griglia>div {
     /* dimensioni e margini */
-    margin: 20px 10px;
-    width: 120px;
-    height: 120px;
-
-
-    background-color: #b80adbdc;
-    border: 1px solid #3889c4;
+    height: 130px;
+    width: 130px;
+    margin: 0.5rem;
+    background-color: #fbad4ddc;
+    border: 1px solid rgb(236, 102, 102);
     border-radius: 10px;
 }
 
@@ -43,7 +43,7 @@ opacity: 100 !important;
     padding: 10px 0;
 }
 
-.icon {
+.icon { /*classe per le card*/
     font-size: 80px;
     text-align: center;
     visibility: visible !important;
@@ -51,7 +51,6 @@ opacity: 100 !important;
     width: 100%;
     height: 100%;
     cursor: pointer;
-    
 }
 
 .disabled {
@@ -62,22 +61,18 @@ opacity: 100 !important;
 .show {
     /* agganciare animation-name rotazione carta */
     animation-name: rotazione-carta;
-
-
     animation-duration: .5s;
-    background-color: white;
-    border: 1px solid #3889c4;
+    background-color: rgb(249, 189, 189);
+    border: 1px solid rgb(249, 189, 189);
     border-radius: 10px;
 }
 
 .find {
     /* agganciare animation-name indovinato */
     animation-name: indovinato;
-
-
     animation-duration: .5s;
-    background-color: rgba(247, 212, 16, 0.56);
-    border: 1px solid #3889c4;
+    background-color: rgb(245, 143, 143);
+    border: 1px solid rgb(236, 102, 102);
     border-radius: 10px;
 }
 
@@ -87,13 +82,13 @@ opacity: 100 !important;
     text-align: center;
     margin-top: 10px;
     padding: 10px;
-    background-color: #b80adbdc;
-    border: 1px solid #3889c4;
+    background-color: rgb(245, 143, 143);
+    border: 1px solid rgb(236, 102, 102);
     border-radius: 5px;
 }
 
 .button:hover {
-    background-color: #16486c;
+    background-color: #b93b7e;
     border: none;
 }
 
@@ -147,26 +142,46 @@ opacity: 100 !important;
 
 @keyframes indovinato { /* animazione quando si indovina */
     from {
-        trasform: rotate(0deg);
+        transform: rotate(0deg);
     }
     to {
-        trasform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
 
 @keyframes rotazione-carta { /* animazione quando ruota la carta */
-    from {
-        transform: perspective(300px)
-        rotate3d(0, 1, 0, 80deg);
-        animation-timing-function: ease-in;
+    from { 
+        transform: rotateY(0deg)
     }
     50% {
-        transform: perspective(300px)
-        rotate3d(0, 1, 0, -10deg);
-        animation-timing-function: ease-in;
+        transform: rotateY(90deg)
     }
     to {
-        transform: perspective(300px);
-        animation-timing-function: ease-in;
+        transform: rotateY(0deg)
     }
+}
+
+
+/* EXTRA 
+#nickname{
+    margin: 1rem;
+}
+
+#leaderboardContainer{
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+}
+
+#leaderboard{
+    font-size: 1.5rem;
+}
+
+tbody tr:nth-of-type(even){
+    background-color: #b80adb80;
+    color:#388ac4;
+}
+tbody tr:nth-of-type(odd){
+    background-color: #388ac49c;
+    color:#b80adbdc;
 }
