--- a/m2/w2/progettom2w2/scss/app.scss
+++ b/m2/w2/progettom2w2/scss/app.scss
@@ -10,11 +10,12 @@
     position: sticky;
     top:0;
     z-index:100;
+    background-color: gradienthover1 ;
 }
-
+/*
 .navbar:hover{
     background-image: $gradienthover1;
-}
+}*/
 .nice-font, h2{
     font-family: 'Dancing Script', cursive;
 }
@@ -103,7 +104,7 @@
 #certificateContainer{
     width: 100vw;
     height: 40vh;
-    padding-bottom: 30vh;
+    padding-bottom: -40px;
  background-color: beige ;
  
 }
@@ -112,15 +113,30 @@
     background-color: $coloregreen4;
 }
 //------------------------MEDIA QUERIES---------------------------
-@media screen and (min-width: 288px) {
+@media screen  and (max-width: 2000px) {
     
 #custom-cards{
-    margin-top: 200ox;
+    margin-top: 35px;
 
+};
+
+#carouselExampleCaptions{
+    @include interpolazione(90vw, auto, 10vh auto);
+
+};
+
+.sectionF{
+    height: 55vh;
 }
 
-    .sectionF{
-
-    }
-    
+h1{
+    font-size: 1.8rem !important;
 }
+p{
+    font-size: 0.8rem;
+}
+.card{
+    height: 40vw;
+}
+}
+
